--- a/OpenGL/CMakeLists.txt
+++ b/OpenGL/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 find_library(glut GLUT)
 find_library(opengL OpenGL)
 
-add_executable(main main.cpp)
+add_executable(main main.cpp index.h basic.cpp polygon.cpp)
 target_link_libraries(main
         "-framework GLUT"
         "-framework OpenGL")
