--- a/OpenGL/glfw/CMakeLists.txt
+++ b/OpenGL/glfw/CMakeLists.txt
@@ -2,10 +2,16 @@ cmake_minimum_required(VERSION 3.14)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(glfw3 3.3 REQUIRED)
+find_package(GLEW REQUIRED)
 
-add_executable(myapp
+add_executable(glfw_app
         test.cpp)
-target_include_directories(myapp PUBLIC ${OPENGL_INCLUDE_DIR})
-target_link_libraries(myapp glfw ${OPENGL_gl_LIBRARY})
+target_include_directories(glfw_app PUBLIC
+        ${GLEW_INCLUDE_DIRS}
+        ${OPENGL_INCLUDE_DIR})
+target_link_libraries(glfw_app
+        glfw
+        ${GLEW_LIBRARIES}
+        ${OPENGL_gl_LIBRARY})
 
 
