add axis to renderer

--- a/OpenGL/glfw/CMakeLists.txt
+++ b/OpenGL/glfw/CMakeLists.txt
@@ -11,6 +11,9 @@ add_executable(glfw_app
         glhelper.h
         glhelper.cpp
 
+        AxisRender.h
+        AxisRenderer.cpp
+
         glfw_main.cpp
 
         ../ext/lodepng/lodepng.h
@@ -21,7 +24,8 @@ add_executable(glfw_app
         Lesson2_Shader.cpp
         Lesson3_Texture.cpp
         Lesson4_Transformations.cpp
-        Lesson5_CoordinateSystem.cpp AxisRenderer.cpp)
+        Lesson5_CoordinateSystem.cpp
+        )
 target_include_directories(glfw_app PUBLIC
         ${GLEW_INCLUDE_DIRS}
         ${OPENGL_INCLUDE_DIR})
