--- a/AndroidDemo/app/src/main/AndroidManifest.xml
+++ b/AndroidDemo/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning"
     >
-        <activity android:name=".MainActivity">
-            <intent-filter>
+        <activity
+          android:name=".MainActivity"
+          android:exported="true">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
