fix compile issue

--- a/OpenGL/glfw/CMakeLists.txt
+++ b/OpenGL/glfw/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(glfw3 3.3 REQUIRED)
+find_package(glfw3 REQUIRED)
 find_package(GLEW REQUIRED)
 
 include_directories(../ext)
@@ -26,12 +26,7 @@ add_executable(glfw_app
         Lesson4_Transformations.cpp
         Lesson5_CoordinateSystem.cpp
         )
-target_include_directories(glfw_app PUBLIC
-        ${GLEW_INCLUDE_DIRS}
-        ${OPENGL_INCLUDE_DIR})
-target_link_libraries(glfw_app
-        glfw
-        ${GLEW_LIBRARIES}
-        ${OPENGL_gl_LIBRARY})
 
+add_definitions(-DGLEW_STATIC)
+target_link_libraries(glfw_app glfw GLEW::GLEW)
 
