--- a/tauri-test-npm/src-tauri/Cargo.toml
+++ b/tauri-test-npm/src-tauri/Cargo.toml
@@ -17,8 +17,9 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 [build-dependencies]
 tauri-build = { version = "2.0.0", features = [] }
 
+# https://github.com/tauri-apps/plugins-workspace
 [dependencies]
-tauri = { version = "2.0.0", features = [] }
+tauri = { version = "2.0.0", features = ["unstable"] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
